2007-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Main/SOGoProductLoader.m: only load bundle directories ending
	with the "SOGo" extension.

	* Main/SOGo.m ([SOGo
	-_checkTableWithCM:cmtableURL:urlandType:tableType]): empty the
	result set if the query has caused no exception. Otherwise we get
	an "evaluation is in progress exception".

2007-06-29  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-generateSQLForInsert]): initialize error to nil before the
	serialization. Otherwise the method can get confused if it ever is
	initialized to something else.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-folderIsMandatory]): returns NO unconditionnally.

	* SoObjects/Contacts/SOGoContactFolders.m ([SOGoContactFolders
	-appendPersonalSources]): add the "personal" folder to the list of
	user folders even if it doesn't exist, so that it is created when
	the user accesses it.

	* SoObjects/Contacts/SOGoContactGCSFolder.m ([SOGoContactGCSFolder
	-folderIsMandatory]): returns YES if nameInContainer is set to
	"personal", which is the default address book.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -folderIsMandatory]): returns YES since
	users must have one Calendar folder (one and only one).
	([SOGoAppointmentFolder -_privacySqlString]): unescape the
	escaping '\' so make the carriage return a real one. This way,
	PgSQL 8 won't complain about escaping the string.

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder -ocsFolder]): new
	method that create the folder if considered mandatory.
	([SOGoFolder -folderIsMandatory]): new method that determines
	whether the folder should be created automatically or not. To be
	overriden by subclasses.

	* Main/SOGo.m ([SOGo -run]): override method and create the
	missing system tables if needed.

2007-06-28  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/WOContext+UIxMailer.m ([WOContext